# mcp-text-utils

./: .gitignore  .mcpbignore  Dockerfile  Makefile  README.md  manifest.json  mcp.json  pyproject.toml  server.py
.github/workflows/: build-bundle.yml
src/mcp_reverse_text/: __init__.py  server.py
src/mcp_text_utils/: __init__.py  api_models.py  server.py
tests/: test_server.py
